--- a/src/modules/Footer/FooterNav/FooterNav.scss
+++ b/src/modules/Footer/FooterNav/FooterNav.scss
@@ -8,18 +8,15 @@
   flex-direction: column;
   gap: func.rem(8);
   color: var(--color-navy);
-  margin-top: агтсюкуь(4);
 
   @include mixins.vp-1280 {
     gap: func.rem(5);
-    margin-top: func.rem(2.54);
   }
 
   @include mixins.vp-320 {
     order: 1;
     align-items: center;
     gap: func.rem(4);
-    margin-top: 0;
   }
 
   &__list {
