--- a/src/shared/styles/global/global.scss
+++ b/src/shared/styles/global/global.scss
@@ -39,6 +39,7 @@ body {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  overflow: hidden;
   background-image: url("/images/bg-2560@1x.jpg");
 
   @include mixins.retina {
